--- a/app/templates/info.html
+++ b/app/templates/info.html
@@ -1,11 +1,27 @@
 <!doctype html>
 <title>File info</title>
-
+<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+		<link rel="stylesheet" href="style.css">
 <body style="text-align: center">
-  <h1>File Info</h1>
+  <h1><p class=Brandname title = "This is a 백석대학교 web page project from the laboratory of  professor Yunhee Kang" > BlockChain </p></h1>
+  <hr>
+  <nav>
+
+    <ul>
+        <li><a href="index.html">홈</li>
+        <li><a href="upload.html">Upload</li>
+       <li><a href="info.html">Uploaded</li>
+       <li><a href="check.html">Check</li>
+     
+  </ul>
+
+</nav>
+  <h1 style="font-size: 30px;">File Info</h1>
   <p>
     <b>{{ filehash }}</b> is {{ info.file_name }}.<br>
-    <a href="{{ url_for('get_file', filename=info.file_name) }}">GET FILE</a>
+    <a href="{{ url_for('get_file', filename=info.file_name) }}"; style="font-size: 30px;" >GET FILE</a>
   </p>
   <p>Upload Date: {{ info.upload_date }}</p>
   <p>File Size: {{ info.file_size }} bytes</p>
