--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -1,9 +1,27 @@
 <!doctype html>
 <title>Upload new File</title>
-
+    <meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+		<link rel="stylesheet" href="style.css">
 <body style="text-align: center">
-  <p>
-    <h1>Upload new File</h1>
+  <h1><p class=Brandname title = "This is a 백석대학교 web page project from the laboratory of  professor Yunhee Kang" > BlockChain </p></h1>
+  <hr>
+  <nav>
+
+    <ul>
+        <li><a href="index.html">홈</li>
+        <li><a href="upload.html">Upload</li>
+       <li><a href="info.html">Uploaded</li>
+       <li><a href="check.html">Check</li>
+     
+  </ul>
+
+</nav>
+
+<p>
+    <h1 style="font-size: 30px;">Upload New File</h1>
+
     <form action="" method=post enctype=multipart/form-data>
       <p>
         <label for=name>Your name</label>
@@ -16,7 +34,7 @@
     </form>
   </p>
   <p>
-    <h1>Check File</h1>
+    <h1 style="font-size: 30px;">Check File</h1>
     <form action="check" method=post enctype=multipart/form-data>
       <p>
         <input type=file name=file>
